--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -19,19 +19,29 @@ jobs:
       packages: write
 
     steps:
+      # ---------- 1. 检出 ----------
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # ---------- 2. 生成小写变量 ----------
+      - name: Generate lowercase repo/owner variables
+        run: |
+          echo "OWNER_LC=${GITHUB_REPOSITORY_OWNER,,}"   >> $GITHUB_ENV
+          echo "REPO_LC=${GITHUB_REPOSITORY,,}"          >> $GITHUB_ENV
+
+      # ---------- 3. 登录 GHCR ----------
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ env.OWNER_LC }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # ---------- 4. 设置 Buildx ----------
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # ---------- 5. 构建并推送 ----------
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -39,9 +49,9 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/nodejs:latest
+            ghcr.io/${{ env.OWNER_LC }}/fastroom:1145
           labels: |
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.source=https://github.com/${{ env.REPO_LC }}
             org.opencontainers.image.description=HTTP Server
             org.opencontainers.image.licenses=MIT
           cache-from: type=gha
